<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".seeAndDeleteActivity">

    <ImageView
        android:layout_marginTop="100dp"
        android:id="@+id/show_img_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_image_24"/>

    <TextView
        android:id="@+id/textViewNavn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/viewNavn"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_venstre"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/venstre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_slett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/slett"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_hoyre"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/hoyre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_leggtilbilde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leggtilbilde" />

    <Button
        android:id="@+id/btn_startQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startQuiz" />

    <TextView
        android:id="@+id/textViewNoImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/red"
        android:textSize="16dp" />


</LinearLayout>

