<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".seeAndDeleteActivity">

    <ImageView
        android:layout_marginTop="100dp"
        android:id="@+id/quiz_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_image_24"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/inputQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/skrivHer"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/riktignavnText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="16dp" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_sendSvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendSvar" />

    <Button
        android:id="@+id/btn_tilbake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilbake" />


</LinearLayout>